traefik/traefik-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
